.kube/gurimoa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gurimoa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gurimoa
  template:
    metadata:
      labels:
        app: gurimoa
    spec:
      containers:
      - name: gurimoa
        image: ${DOCKER_IMAGE_NAME_WITH_TAG}
        ports:
        - containerPort: 80
