.kube/gurimoa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gurimoa
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: gurimoa
