.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gurimoa-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt
spec:
  tls:
    - hosts:
      - gurimoa.net
      secretName: gurimoa-cert
  rules:
  - host: gurimoa.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gurimoa
            port:
              number: 80
